# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./books";
 export * from "./loans";
 export * from "./activity-logs";
+export * from "./notifications";
